--- a/.github/workflows/Bump Release workflow.yml
+++ b/.github/workflows/Bump Release workflow.yml
@@ -61,7 +61,7 @@ jobs:
         uses: ncipollo/release-action@v1.14.0
         with:
           tag: ${{ steps.sanitize_tag.outputs.clean }}
-          name: ${{ steps.sanitize_tag.outputs.clean }}
+          name: Release ${{ steps.sanitize_tag.outputs.clean }}
           prerelease: false
           generateReleaseNotes: true
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -123,7 +123,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.get_latest_tag.outputs.new_major_tag }}
-          release_name: Release ${{ steps.get_latest_tag.outputs.new_major_tag }}
+          release_name: ${{ steps.get_latest_tag.outputs.new_major_tag }}
           body: |
             Release created automatically by GitHub Actions.
           draft: false
