--- a/.github/workflows/update-minor-version.yml
+++ b/.github/workflows/update-minor-version.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get latest tag
         id: get_latest_tag
@@ -68,7 +68,7 @@ jobs:
           name: Release ${{ steps.sanitize_tag.outputs.clean }}
           prerelease: true
           generateReleaseNotes: true
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check Output Parameters
         run: |
