--- a/.github/workflows/update-minor-version.yml
+++ b/.github/workflows/update-minor-version.yml
@@ -65,7 +65,7 @@ jobs:
         uses: ncipollo/release-action@v1.14.0
         with:
           tag: ${{ steps.sanitize_tag.outputs.clean }}
-          name: Release ${{ steps.sanitize_tag.outputs.clean }}
+          name: ${{ steps.sanitize_tag.outputs.clean }}
           prerelease: true
           generateReleaseNotes: true
           token: ${{ secrets.GITHUB_TOKEN }}
