--- a/.github/workflows/Bump Release workflow.yml
+++ b/.github/workflows/Bump Release workflow.yml
@@ -40,6 +40,12 @@ jobs:
       pull-requests: read
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.2
@@ -71,24 +77,34 @@ jobs:
 
       - name: Create release branch
         id: create_branch
+        env:
+          RELEASE_TAG: ${{ steps.sanitize_tag.outputs.clean }}
         run: |
           # Extract version from tag (remove 'v' prefix)
           VERSION="${RELEASE_TAG#v}"
           BRANCH_NAME="release-$VERSION"
           
-          # Create and push the new branch
-          git checkout -b $BRANCH_NAME
-          git push origin $BRANCH_NAME
+          # Set git configuration
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
           
-          echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
-          echo "✅ Created branch: $BRANCH_NAME"
-        env:
-          RELEASE_TAG: ${{ steps.sanitize_tag.outputs.clean }}
+          # Check if branch already exists
+          if git show-ref --verify --quiet "refs/heads/$BRANCH_NAME"; then
+            echo "⚠️ Branch $BRANCH_NAME already exists, skipping creation"
+            echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
+          else
+            # Create and push the new branch from current commit
+            git checkout -b $BRANCH_NAME
+            git push origin $BRANCH_NAME
+            echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
+            echo "✅ Created branch: $BRANCH_NAME"
+          fi
 
       - name: Check Output Parameters
         run: |
-          echo "Got tag name ${{ steps.sanitize_tag.outputs.clean }}"
-          echo "Got release version ${{ steps.sanitize_tag.outputs.clean }}"
+          echo "Got tag name: ${{ steps.sanitize_tag.outputs.clean }}"
+          echo "Got release version: ${{ steps.sanitize_tag.outputs.clean }}"
+          echo "Got branch name: ${{ steps.create_branch.outputs.branch_name }}"
           echo "RELEASE_TAG in create-release-tag job: ${{ steps.sanitize_tag.outputs.clean }}"
           echo "Release upload URL: ${{ steps.create_release.outputs.upload_url }}"
 
@@ -144,23 +160,25 @@ jobs:
 
 
   sync-to-other-repos:
-    needs: build
+    needs: 
+      - build
+      - create-release-tag
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - name: Sync tag to child-version-update
+      - name: Sync tag and branch to child-version-update
         uses: actions/github-script@v6
         env:
           REPO_B: "sharath3087/child-version-update"
           NEW_TAG: ${{ needs.build.outputs.LATEST_RELEASE_VERSION_New }}
           PAT_TOKEN: ${{ secrets.REPO_SYNC_TOKEN }}
-          RELEASE_BRANCH: ${{ needs.build.outputs.RELEASE_BRANCH }}
+          RELEASE_BRANCH: ${{ needs.create-release-tag.outputs.RELEASE_BRANCH }}
         with:
           script: |
-            const { REPO_B, NEW_TAG, PAT_TOKEN } = process.env;
+            const { REPO_B, NEW_TAG, PAT_TOKEN, RELEASE_BRANCH } = process.env;
             
-            console.log(`Syncing tag ${NEW_TAG} to ${REPO_B}`);
+            console.log(`Syncing tag ${NEW_TAG} and branch ${RELEASE_BRANCH} to ${REPO_B}`);
             
             // Use the built-in github object but override the token
             // Create a custom request function with PAT
@@ -218,8 +236,9 @@ jobs:
               });
               
               console.log(`✅ Successfully synced tag ${NEW_TAG} to ${REPO_B}`);
-             // Create release branch 
-            try {
+              
+              // Create release branch 
+              try {
                 await makeRequestWithPAT('POST', `${baseURL}/repos/${owner}/${repo}/git/refs`, {
                   body: {
                     ref: `refs/heads/${RELEASE_BRANCH}`,
